Opened 12 years ago

Closed 12 years ago

#1105 closed defect (fixed)

flashsv2 enc: crash with -s 16x16

Reported by: ami_stuff Owned by:
Priority: normal Component: avcodec
Version: git-master Keywords: flashsv2
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: yes

Description

Please test if reproducible, if not I will compile git head later.

C:\>ffmpeg -i 599.png -s 16x16 -vcodec flashsv2 -strict -2 out.avi
ffmpeg version N-38892-g6cabb67 Copyright (c) 2000-2012 the FFmpeg developers
  built on Mar 19 2012 02:36:23 with gcc 4.5.0 20100414 (Fedora MinGW 4.5.0-1.fc
14)
  configuration: --prefix=/var/www/users/research/ffmpeg/snapshots/build --arch=
x86 --target-os=mingw32 --cross-prefix=i686-pc-mingw32- --cc='ccache i686-pc-min
gw32-gcc' --enable-w32threads --enable-memalign-hack --enable-runtime-cpudetect
--enable-cross-compile --enable-static --disable-shared --extra-libs='-lws2_32 -
lwinmm' --extra-cflags='--static -I/var/www/users/research/ffmpeg/snapshots/buil
d/include' --extra-ldflags='-static -L/var/www/users/research/ffmpeg/snapshots/b
uild/lib' --enable-bzlib --enable-zlib --enable-gpl --enable-version3 --enable-n
onfree --enable-libx264 --enable-libspeex --enable-libtheora --enable-libvorbis
--enable-libfaac --enable-libxvid --enable-libopencore-amrnb --enable-libopencor
e-amrwb --enable-libmp3lame --enable-libvpx --disable-decoder=libvpx
  libavutil      51. 42.100 / 51. 42.100
  libavcodec     54. 11.100 / 54. 11.100
  libavformat    54.  2.100 / 54.  2.100
  libavdevice    53.  4.100 / 53.  4.100
  libavfilter     2. 65.101 /  2. 65.101
  libswscale      2.  1.100 /  2.  1.100
  libswresample   0.  7.100 /  0.  7.100
  libpostproc    52.  0.100 / 52.  0.100
Input #0, image2, from '599.png':
  Duration: 00:00:00.04, start: 0.000000, bitrate: N/A
    Stream #0:0: Video: png, rgb24, 599x412, 25 tbr, 25 tbn, 25 tbc
Incompatible pixel format 'rgb24' for codec 'flashsv2', auto-selecting format 'b
gr24'
[buffer @ 0x1d91b60] w:599 h:412 pixfmt:rgb24 tb:1/1000000 sar:0/1 sws_param:
[scale @ 0x1d91120] w:599 h:412 fmt:rgb24 sar:0/1 -> w:16 h:16 fmt:bgr24 sar:0/1
 flags:0x4

C:\>

Change History (3)

comment:1 by Elon Musk, 12 years ago

Reproduced by developer: set
Status: newopen
Version: unspecifiedgit-master

Got floating exception with:

ffmpeg -i ~/git/fate-suite/dxtory/dxtory_mic.avi -s 36x36 -an -vcodec flashsv2 -pix_fmt bgr24 -strict -2 out.avi

comment:2 by Carl Eugen Hoyos, 12 years ago

Analyzed by developer: set
Component: undeterminedavcodec
Keywords: flashsv2 added

Crashes for widths and heights below 192 in line 207/208 of flashsv2enc.c:

    s->block_width  = (s->image_width /  12) & ~15;
    s->block_height = (s->image_height / 12) & ~15;

    s->rows = (s->image_height + s->block_height - 1) / s->block_height;
    s->cols = (s->image_width +  s->block_width -  1) / s->block_width;

comment:3 by Michael Niedermayer, 12 years ago

Resolution: fixed
Status: openclosed
Note: See TracTickets for help on using tickets.